[package]
name = "data_pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
postgres = "0.19.4"
reqwest ={ version = "0.11.13", features = ["blocking"] }
tempfile = "3.3.0"
tokio = { version = "1.24.1", features = ["full"] }
zip = "0.6.3"
